--- a/WebAppnTier/WebAppnTier/Views/Employee/Index.cshtml
+++ b/WebAppnTier/WebAppnTier/Views/Employee/Index.cshtml
@@ -9,36 +9,40 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<div style="color:aqua;">
+    @Html.ActionLink("Employee By Department", "EmployeeByDepartment", "Employee", null)
+</div>
 <table class="table">
     <tr>
-   
+
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Gender)
         </th>
-        
+
         <th>Actions to Perform</th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
-         
+
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Gender)
             </td>
-           
+
             <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.ID}) |
-                @Html.ActionLink("Details", "Details", new { id=item.ID}) |
-                @Html.ActionLink("Delete", "Delete", new {id=item.ID})
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
             </td>
         </tr>
+
     }
 
 </table>
