Added JQuery Selectors Page and its functions on it

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -7,11 +7,11 @@
 <nav>
     @Html.ActionLink("Register","Register") |
     @Html.ActionLink("document Ready Event","Window") |
-    <a href="/js/">JavaScript</a> |
+    @Html.ActionLink("Selectors","Selectors")|
     <a href="/jquery/">jQuery</a>
 </nav>
 <br /><br /><br /><br /><br />
-<img src="~/Models/web-scraper.png" />
+<img src="~/Images/web-scraper.png" />
 <br /><br />
 
 
