--- a/Jquery/Jquery/Views/Home/Window.cshtml
+++ b/Jquery/Jquery/Views/Home/Window.cshtml
@@ -1,31 +1,36 @@
-﻿<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+﻿
+
+<script src="~/Scripts/jquery-3.3.1.js"></script>
 @{
     ViewBag.Title = "Window";
 }
 
 
-<h2>Window Load Event</h2>
-<script>
+<h3>Window Load and Document Ready Events, by which we can get the size of the image</h3>
 
+
+<script>
     $(document).ready(function () {
 
-        alert("This is Document ready event!!");
+
+        $('#div1').html("This is using document ready" + "</br>" + " Height: " + $('#img1').height() + "</br>" + "Width: " + $('#img1').width() + "</br></br>");
+
     });
 
 </script>
 
 <script>
 
-    $(window).on('load', function () {
+        $(window).on('load', function () {
 
-        alert('This is window load function event!!');
+                $('#div2').html("This is using window load" + "</br>" + "Height: " + $('#img1').height() + "</br>" + "Width: " + $('#img1').width());
 
-    });
-
+            });
 </script>
+<div id="div1"></div>
+<div id="div2"></div>
 
-
-<img src="~/Models/images.jpg" /><br />
+<img id="img1" src="~/Images/images.jpg" /><br />
 @Html.ActionLink("Go Back", "Index")<br />
 
 The windows load event is gonna wait for all the DOMS, pictures, css  and Frame to be loaded
@@ -33,3 +38,4 @@ But now it is changes.
 
 You can get the height and widwth of picture using document ready function.
 <br /><br /><br /><br /><br /><br />
+
