Added Input Selector Page and its code

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     @Html.ActionLink("Register","Register") |
     @Html.ActionLink("document Ready Event","Window") |
     @Html.ActionLink("Selectors","Selectors")|
-    <a href="/jquery/">jQuery</a>
+    @Html.ActionLink("Input and :Input Selectors","Input")
 </nav>
 <br /><br /><br /><br /><br />
 <img src="~/Images/web-scraper.png" />
