Added Selectors Extended Page

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     @Html.ActionLink("document Ready Event","Window") |
     @Html.ActionLink("Selectors","Selectors")|
     @Html.ActionLink("Input and :Input Selectors","Input")
+    @Html.ActionLink("Selectors Extended","SelectorExtended")
 </nav>
 <br /><br /><br /><br /><br />
 <img src="~/Images/web-scraper.png" />
