Animations in Jquery

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     @Html.ActionLink("Selectors","Selectors")|
     @Html.ActionLink("Input and :Input Selectors","Input")
     @Html.ActionLink("Selectors Extended","SelectorExtended")
+    @Html.ActionLink("Animation","Animation")
 </nav>
 <br /><br /><br /><br /><br />
 <img src="~/Images/web-scraper.png" />
