JSON with Jquery

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
     @Html.ActionLink("Input and :Input Selectors","Input")
     @Html.ActionLink("Selectors Extended","SelectorExtended")
     @Html.ActionLink("Animation","Animation")
+    @Html.ActionLink("JSON","JsonPage")
 </nav>
 <br /><br /><br /><br /><br />
 <img src="~/Images/web-scraper.png" />
