--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
     @Html.ActionLink("Register","Register") |
     @Html.ActionLink("document Ready Event","Window") |
     @Html.ActionLink("Selectors","Selectors")|
-    @Html.ActionLink("Input and :Input Selectors","Input")
-    @Html.ActionLink("Selectors Extended","SelectorExtended")
-    @Html.ActionLink("Animation","Animation")
+    @Html.ActionLink("Input and :Input Selectors","Input")|
+    @Html.ActionLink("Selectors Extended","SelectorExtended")|
+    @Html.ActionLink("Animation","Animation")|
     @Html.ActionLink("JSON","JsonPage")
 </nav>
 <br /><br /><br /><br /><br />
