Jquery some more events

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -5,13 +5,14 @@
 
 <h2>You are about to see Jquery and its Funcationality</h2>
 <nav>
-    @Html.ActionLink("Register","Register") |
-    @Html.ActionLink("document Ready Event","Window") |
-    @Html.ActionLink("Selectors","Selectors")|
-    @Html.ActionLink("Input and :Input Selectors","Input")|
-    @Html.ActionLink("Selectors Extended","SelectorExtended")|
-    @Html.ActionLink("Animation","Animation")|
-    @Html.ActionLink("JSON","JsonPage")
+    @Html.ActionLink("Register", "Register") |
+    @Html.ActionLink("document Ready Event", "Window") |
+    @Html.ActionLink("Selectors", "Selectors")|
+    @Html.ActionLink("Input and :Input Selectors", "Input")|
+    @Html.ActionLink("Selectors Extended", "SelectorExtended")|
+    @Html.ActionLink("Animation", "Animation")|
+    @Html.ActionLink("JSON", "JsonPage")|
+    @Html.ActionLink("JQueryClass", "JqueryClass")
 </nav>
 <br /><br /><br /><br /><br />
 <img src="~/Images/web-scraper.png" />
