Added Events Page done with Jquery

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -12,7 +12,8 @@
     @Html.ActionLink("Selectors Extended", "SelectorExtended")|
     @Html.ActionLink("Animation", "Animation")|
     @Html.ActionLink("JSON", "JsonPage")|
-    @Html.ActionLink("JQueryClass", "JqueryClass")
+    @Html.ActionLink("JQueryClass", "JqueryClass")|
+    @Html.ActionLink("JQueryEvents", "Events")
 </nav>
 <br /><br /><br /><br /><br />
 <img src="~/Images/web-scraper.png" />
