some changes in animation page

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -13,7 +13,8 @@
     @Html.ActionLink("Animation", "Animation")|
     @Html.ActionLink("JSON", "JsonPage")|
     @Html.ActionLink("JQueryClass", "JqueryClass")|
-    @Html.ActionLink("JQueryEvents", "Events")
+    @Html.ActionLink("JQueryEvents", "Events")|
+    @Html.ActionLink("Image Gallery","ImageAnimation")
 </nav>
 <br /><br /><br /><br /><br />
 <img src="~/Images/web-scraper.png" />
