Loading webservice data using Jquery

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -14,10 +14,30 @@
     @Html.ActionLink("JSON", "JsonPage")|
     @Html.ActionLink("JQueryClass", "JqueryClass")|
     @Html.ActionLink("JQueryEvents", "Events")|
-    @Html.ActionLink("Image Gallery","ImageAnimation")
+    @Html.ActionLink("Image Gallery", "ImageAnimation")
+
+
 </nav>
-<br /><br /><br /><br /><br />
-<img src="~/Images/web-scraper.png" />
+
+<br /><br /><br />
+<table>
+    <tr>
+        <td>
+            <ul>
+                <li>@Html.ActionLink("AJAX", "Ajax1")</li>
+                <li>@Html.ActionLink("Webserive", "")</li>
+            </ul>
+        </td><td></td>
+        <td>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <img src="~/Images/web-scraper.png" />
+        </td>
+    </tr>
+</table>
 <br /><br />
 
 
