Using Facebook and openweather Web API in my project

--- a/Jquery/Jquery/Views/Home/Index.cshtml
+++ b/Jquery/Jquery/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
     @Html.ActionLink("JQueryClass", "JqueryClass")|
     @Html.ActionLink("JQueryEvents", "Events")|
     @Html.ActionLink("Image Gallery", "ImageAnimation")
+    
 
 
 </nav>
@@ -24,8 +25,10 @@
     <tr>
         <td>
             <ul>
-                <li>@Html.ActionLink("JQUERY AJAX Load Function from HTML", "Ajax1")</li>
-                <li>@Html.ActionLink("Working", "ASPX")</li>
+                <li>@Html.ActionLink("JQUERY AJAX Load Function reading data from HTML file", "Ajax1")</li>
+                <li>@Html.ActionLink("JQUERY Loading Web Api from realtime webserver", "JqueryWebservice", "Webservice")</li>
+                <li>@Html.ActionLink("JQUERY Loading Web Api from Facebook", "facebook", "Webservice")</li>
+                <li>@Html.ActionLink("Weather", "Weather", "Webservice")</li>
             </ul>
         </td><td></td>
         <td>
